css: fix select box not showing * change the css accordingly

--- a/assets/opentok-hardware-setup.css
+++ b/assets/opentok-hardware-setup.css
@@ -17,7 +17,7 @@
 }
 
 .OT_publisher{
-  width: 300px !important;
+  width: 330px !important;
 }
 
 .opentok-hardware-setup {
@@ -111,7 +111,7 @@
 
 .opentok-hardware-setup .opentok-hardware-setup-preview {
   margin-left: 100px;
-  width: 220px;
+  width: 340px;
 }
 
 
@@ -120,15 +120,13 @@
 }
 
 .opentok-hardware-setup .opentok-hardware-setup-activity-bg {
-  height: 5px;
-  background: white;
-  border-radius: 4px;
-  /*background-image: url('data:image/svg+xml;charset=utf-8,%3Csvg%20viewBox%3D%22-1%200%2010%2014%22%20version%3D%221.1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20x%3D%220%22%20y%3D%220%22%20width%3D%2210px%22%20height%3D%2214px%22%3E%3Cg%3E%3Crect%20x%3D%220%22%20y%3D%220%22%20width%3D%227%22%20height%3D%2214%22%20fill%3D%22%23ffffff%22%20rx%3D%222.415%22%20ry%3D%222.415%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E');*/
-  /* <svg viewBox="-1 0 10 14" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0" y="0" width="10px" height="14px"><g><rect x="0" y="0" width="7" height="14" fill="#ffffff" rx="2.415" ry="2.415"/></g></svg> */
+  height: 14px;
+  background-image: url('data:image/svg+xml;charset=utf-8,%3Csvg%20viewBox%3D%22-1%200%2010%2014%22%20version%3D%221.1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20x%3D%220%22%20y%3D%220%22%20width%3D%2210px%22%20height%3D%2214px%22%3E%3Cg%3E%3Crect%20x%3D%220%22%20y%3D%220%22%20width%3D%227%22%20height%3D%2214%22%20fill%3D%22%23D9D9D9%22%20rx%3D%222.415%22%20ry%3D%222.415%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E');
+  /* <svg viewBox="-1 0 10 14" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0" y="0" width="10px" height="14px"><g><rect x="0" y="0" width="7" height="14" fill="#D9D9D9" rx="2.415" ry="2.415"/></g></svg> */
 }
 
 .opentok-hardware-setup .opentok-hardware-setup-activity-fg {
-  height: 5px;
-  background: #009D90;
-  /* <svg viewBox="-1 0 10 14" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0" y="0" width="10px" height="14px"><defs><linearGradient id="gradient1" x1="50%" y1="0%" x2="50%" y2="100%"><stop stop-color="#009D90" stop-opacity="1" offset="0%"/><stop stop-color="#009D90" stop-opacity="1" offset="100%"/></linearGradient></defs><g id="Layer%201"><rect x="0" y="0" width="7" height="14" fill="url(#gradient1)" rx="2.415" ry="2.415"/></g></svg> */
+  height: 14px;
+  background-image: url('data:image/svg+xml;charset=utf-8,%3Csvg%20viewBox%3D%22-1%200%2010%2014%22%20version%3D%221.1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20x%3D%220%22%20y%3D%220%22%20width%3D%2210px%22%20height%3D%2214px%22%3E%3Cg%3E%3Crect%20x%3D%220%22%20y%3D%220%22%20width%3D%227%22%20height%3D%2214%22%20fill%3D%22%23009D90%22%20rx%3D%222.415%22%20ry%3D%222.415%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E');
+  /* <svg viewBox="-1 0 10 14" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0" y="0" width="10px" height="14px"><defs><linearGradient id="gradient1" x1="50%" y1="0%" x2="50%" y2="100%"><stop stop-color="#acd24c" stop-opacity="1" offset="0%"/><stop stop-color="#009D90" stop-opacity="1" offset="100%"/></linearGradient></defs><g id="Layer%201"><rect x="0" y="0" width="7" height="14" fill="#009D90" rx="2.415" ry="2.415"/></g></svg> */
 }
